Akeeba Data Compliance 1.2.0
================================================================================
~ Preliminary work for PHP future 7.4 compatibility
# [HIGH] CLI (CRON) scripts could sometimes stop with a Joomla crash due to Joomla's mishandling of the session under CLI.

Akeeba Data Compliance 1.1.1
================================================================================
+ Rewritten cookie plugin to work with caching enabled
+ Consent can be transcribed from Joomla's privacy consent user profile field (migration from Joomla to DataCompliance)
~ Transcribing consent given during subscription only applies to Akeeba Subscriptions 5 and 6
~ Compatibility with Akeeba Subscriptions 7 for data export and user anonymisation (Users model has been removed)
# User Profile fields not displayed correctly when using an Edit Profile menu item

Akeeba Data Compliance 1.1.0
================================================================================
+ Protection of all component and plugin folders against direct web access
+ Export data: support for Joomla “privacy” group plugins
! Immediate failure accessing the backend of the component [gh-27]
# [HIGH] ATS export, causing fatal error
# [LOW] Cookie compliance fails with a fatal error when the server does not set the HTTP_HOST environment variable
# [LOW] PHP 7.3 warning in the Control Panel page
# [LOW] The cookie consent code was outside the BODY tag

Akeeba Data Compliance 1.0.1
================================================================================
+ Cookie consent plugin
~ Joomla! 3.9 backend Components menu item compatibility

Akeeba Data Compliance 0.1.0
================================================================================
* First release